# live-bootcamp-project

./: .env  README.md  compose.yml  docker.bat
.github/workflows/: prod.yml
app-service/: Dockerfile
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-2f716a7e7661b0e891cab523296b3fac3894c726a945d7dc8908ea317c86a7c4.json  query-7e78a365258ce2e8870ecde0be89768f8fb8d3a2e8b605749a58cdfd2aa5b0f2.json
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: banned_tokens_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: banned_tokens_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  routers.rs  signup.rs  verify_2fa.rs  verify_token.rs
