[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum = "0.8.6"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.1", features = ["cookie"] } #provides extra utilities for axum. The cookie feature enables the CookieJar extractor, which we will use to view & set cookies.
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = "=0.20.0"
jsonwebtoken = {version="10.2.0", features=["rust_crypto"]} # is an easy-to-use JWT library for Rust. It allows us to create and decode JWTs in a strongly typed way.
chrono = "0.4.42" #is a date and time library for Rust. We will use it to calculate JWT expiry.

dotenvy = "0.15.7" #loads environment variables from a .env file.
lazy_static = "1.5.0" #provides a macro for declaring lazily evaluated statics in Rust.

rand = "0.9.2"

sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }

argon2 = { version = "0.5.3", features = ["std"] }

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
